syntax = "proto3";

option java_multiple_files = true;
option java_package = "github.com/denjons/RoboViewer/robot-gateway/grpc/positionreport";
option java_outer_classname = "PositionReportProto";

package positionreport;

service PositionReport { 
    rpc ReportPosition(stream PositionUpdate) returns (PositionUpdateResponse) {}
    rpc ReportSession(SessionUpdate) returns (SessionUpdateResponse) {}
}

message SessionUpdate {
  SessionId sessionId = 1;
  SessionState sessionState = 2;
}

enum SessionState {
  STARTED = 0;
  FINISHED = 1;
}

message SessionUpdateResponse {
  ResponseStatus responseStatus = 1;
  string statusMessage = 2;
}

message PositionUpdate {
    SequenceNumber sequenceNumber = 1;
    Position position = 2;
    RobotId robotId = 3;
    SessionId sessionId = 4;
}

message PositionUpdateResponse {
    ResponseStatus responseStatus = 1;
    string statusMessage = 2;
}

enum ResponseStatus {
    OK = 0;
    ERROR = 1;
}

message SequenceNumber{
    int64 Value = 1;
}

message Position {
    int32 x = 1;
    int32 y = 2;
}

message RobotId {
    string Value = 1;
}

message SessionId {
    string Value = 1;
}